src/human_study/program_6/python_err_msg.txt
File "./seq2parse/human_study/program_6/original.py", line 2
    print(*)
           ^
SyntaxError: invalid syntax
